View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027815 | Open CASCADE | OCCT:Visualization | public | 2016-08-26 18:54 | 2016-12-09 16:40 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027815: Visualization, TKV3d - AIS_InteractiveContext has inconsistent display mode API | ||||
Description | Two overloads of AIS_InteractiveContext::SetDisplayMode() use different argument types for the display mode (AIS_DisplayMode vs Standard_Integer). Meanwhile, a generic integer is used throughout TKV3d to identify a display mode. Using AIS_DisplayMode enum imposes a serious restriction on the API usage. Thus it is proposed to use Standard_Integer in the both overloads of SetDisplayMode(). | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27815 has been created by san. SHA-1: 0d0997b5c994a13397114effcc626f617a72e8e4 Detailed log of new commits: Author: san Date: Fri Aug 26 19:04:23 2016 +0300 0027815: Visualization, TKV3d - AIS_InteractiveContext has inconsistent display mode API Author: san Date: Fri Aug 26 20:45:07 2016 +0300 Merge branch 'master' of san-occt:occt.git Author: san Date: Wed Aug 10 12:02:57 2016 +0300 Merge branch 'master' of san-occt:occt Author: san Date: Mon Aug 1 19:05:32 2016 +0300 Merge branch 'master' of san-occt:occt.git Author: san Date: Thu Jun 23 17:46:18 2016 +0300 Merge branch 'master' of san-occt:occt Author: bugmaster Date: Thu Jun 23 17:11:34 2016 +0300 0027631: license.md duplicated in the current master HEAD |
|
Branch CR27815 has been deleted by san. SHA-1: 0d0997b5c994a13397114effcc626f617a72e8e4 |
|
Branch CR27815 has been created by san. SHA-1: a3434bbfc20b3694a08584d3c9356309b2d2a2cf Detailed log of new commits: Author: san Date: Fri Aug 26 19:04:23 2016 +0300 0027815: Visualization, TKV3d - AIS_InteractiveContext has inconsistent display mode API |
|
Branch CR27815 ready for reviewing. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR27815 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: a3434bbfc20b3694a08584d3c9356309b2d2a2cf There are following compilation errors: Windows: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27815-master/job/CR27815-master-Products-Windows-64-VC10-csharp-samples/1/parsed_console/ d:\install\CR27815-master\Windows-64-VC10-opt\Products\samples\csharp\ImportExport\OCCViewer.cs(239,7): error CS1502: The best overloaded method match for 'AIS.AIS_InteractiveContext.SetDisplayMode(int)' has some invalid arguments d:\install\CR27815-master\Windows-64-VC10-opt\Products\samples\csharp\ImportExport\OCCViewer.cs(239,35): error CS1503: Argument 1: cannot convert from 'AIS.AIS_DisplayMode' to 'int' Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1126 |
|
Dear san, Branch CR27815 has been rejected due to: - compilation errors |
|
Branch CR27815 has been updated forcibly by san. SHA-1: b0eebb5f3a35e0742b05515525144b5d0b4021c1 |
|
Branch CR27815 in occt.git rebased to current master. Branch CR27815 in occt-products.git includes correction of build error. |
|
Please compilation test updated patch (regression testing is not needed). |
|
Dear BugMaster, Branch CR27815 was rebased on IR-2016-09-01 of products git-repository. SHA-1: b8696a68cddcc9ddaf16e9042939b0217bb1a566 |
|
Dear BugMaster, Branch CR27815 from occt git-repository (and CR27815 from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: b0eebb5f3a35e0742b05515525144b5d0b4021c1 SHA-1: b8696a68cddcc9ddaf16e9042939b0217bb1a566 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1146 |
|
Dear BugMaster, Branch CR27815 is TESTED. |
|
Branch CR27815 has been deleted by kgv. SHA-1: b0eebb5f3a35e0742b05515525144b5d0b4021c1 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-26 18:54 |
|
New Issue | |
2016-08-26 18:54 |
|
Assigned To | => san |
2016-08-26 18:54 |
|
Status | new => assigned |
2016-08-26 20:42 |
|
Relationship added | related to 0021306 |
2016-08-26 20:44 | git | Note Added: 0057221 | |
2016-08-26 20:48 | git | Note Added: 0057222 | |
2016-08-26 20:49 | git | Note Added: 0057223 | |
2016-08-26 20:51 |
|
Note Added: 0057224 | |
2016-08-26 20:51 |
|
Assigned To | san => kgv |
2016-08-26 20:51 |
|
Status | assigned => resolved |
2016-08-26 20:51 |
|
Steps to Reproduce Updated | |
2016-08-26 22:08 | kgv | Note Added: 0057225 | |
2016-08-26 22:08 | kgv | Assigned To | kgv => bugmaster |
2016-08-26 22:08 | kgv | Severity | trivial => integration request |
2016-08-26 22:08 | kgv | Status | resolved => reviewed |
2016-08-29 12:28 |
|
Assigned To | bugmaster => mkv |
2016-08-29 17:30 |
|
Note Added: 0057263 | |
2016-08-29 17:31 |
|
Note Added: 0057264 | |
2016-08-29 17:31 |
|
Assigned To | mkv => san |
2016-08-29 17:31 |
|
Status | reviewed => assigned |
2016-09-02 19:16 | git | Note Added: 0057435 | |
2016-09-02 19:17 |
|
Note Added: 0057436 | |
2016-09-02 19:17 |
|
Assigned To | san => kgv |
2016-09-02 19:17 |
|
Status | assigned => resolved |
2016-09-02 19:31 | kgv | Note Added: 0057437 | |
2016-09-02 19:31 | kgv | Assigned To | kgv => bugmaster |
2016-09-02 19:31 | kgv | Status | resolved => reviewed |
2016-09-05 14:55 |
|
Assigned To | bugmaster => mkv |
2016-09-05 19:39 |
|
Note Added: 0057488 | |
2016-09-05 19:39 |
|
Note Added: 0057489 | |
2016-09-05 19:39 |
|
Note Added: 0057490 | |
2016-09-05 19:39 |
|
Assigned To | mkv => bugmaster |
2016-09-05 19:39 |
|
Status | reviewed => tested |
2016-09-05 19:39 |
|
Test case number | => Not needed |
2016-09-09 09:40 | bugmaster | Changeset attached | => occt master e5d7e249 |
2016-09-09 09:40 | bugmaster | Status | tested => verified |
2016-09-09 09:40 | bugmaster | Resolution | open => fixed |
2016-10-28 21:48 | git | Note Added: 0059572 | |
2016-12-09 16:29 |
|
Status | verified => closed |
2016-12-09 16:40 |
|
Fixed in Version | => 7.1.0 |