0027815: Visualization, TKV3d - AIS_InteractiveContext has inconsistent display mode API